Add integration tests for insert and merge script with SQL Server database. Fix insert and merge script generation.

--- a/tests/EFSeed.Core.IntegrationTests/EFSeed.Core.IntegrationTests.csproj
+++ b/tests/EFSeed.Core.IntegrationTests/EFSeed.Core.IntegrationTests.csproj
@@ -26,7 +26,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\EFSeed.Core\EFSeed.Core.csproj" />
-      <ProjectReference Include="..\EFSeed.Core.Tests.Common\EFSeed.Core.Tests.Common.csproj" />
+      <ProjectReference Include="..\EFSeed.Tests.Common\EFSeed.Tests.Common.csproj" />
     </ItemGroup>
 
 </Project>
