--- a/src/EFSeed.Cli/EFSeed.Cli.csproj
+++ b/src/EFSeed.Cli/EFSeed.Cli.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
     
 </Project>
