--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,18 +26,18 @@ jobs:
       - name: Unit Tests
         run: dotnet test -c Release --no-build
         working-directory: tests/EFSeed.Core.UnitTests
-      - name: Integration Tests
-        run: dotnet test -c Release --no-build
-        working-directory: tests/EFSeed.Core.IntegrationTests
+#      - name: Integration Tests
+#        run: dotnet test -c Release --no-build
+#        working-directory: tests/EFSeed.Core.IntegrationTests
       - name: Pack Core
         run: dotnet pack --output nupkgs --no-build --nologo --include-symbols -p:PackageVersion=${{env.GitVersion_NuGetVersion}} ./src/EFSeed.Core/EFSeed.Core.csproj
       - name: Pack Cli
         run: dotnet pack --output nupkgs --no-build --nologo --include-symbols -p:PackageVersion=${{env.GitVersion_NuGetVersion}} ./src/EFSeed.Cli/EFSeed.Cli.csproj
-      - name: Upload
+      - name: Upload packages
         uses: actions/upload-artifact@v4
         with:
           path: ./nupkgs
           name: packages
-      - name: Publish to Nuget
-        run: dotnet nuget push --force-english-output --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json
-        working-directory: ./nupkgs
+#      - name: Publish to Nuget
+#        run: dotnet nuget push --force-english-output --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json
+#        working-directory: ./nupkgs
