Allow publishing to Nuget

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,6 @@ jobs:
         with:
           path: ./nupkgs
           name: packages
-#      - name: Publish to Nuget
-#        run: dotnet nuget push --force-english-output --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json
-#        working-directory: ./nupkgs
+      - name: Publish to Nuget
+        run: dotnet nuget push --force-english-output --api-key ${{secrets.NUGET_KEY}} --source https://api.nuget.org/v3/index.json
+        working-directory: ./nupkgs
