--- a/tests/EFSeed.Tests.Common/EFSeed.Tests.Common.csproj
+++ b/tests/EFSeed.Tests.Common/EFSeed.Tests.Common.csproj
@@ -23,6 +23,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+        <PackageReference Include="Bogus" Version="35.5.0" />
     </ItemGroup>
 
 </Project>
