Project loading refactorization and simplification. SeedBuilder creates SeedDefinition.

--- a/src/EFSeed.Cli/EFSeed.Cli.csproj
+++ b/src/EFSeed.Cli/EFSeed.Cli.csproj
@@ -36,4 +36,8 @@
       <ProjectReference Include="..\EFSeed.Core\EFSeed.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Commands\" />
+    </ItemGroup>
+
 </Project>
