--- a/src/EFSeed.Cli/EFSeed.Cli.csproj
+++ b/src/EFSeed.Cli/EFSeed.Cli.csproj
@@ -37,7 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Commands\" />
+      <Folder Include="Commands\Reset\" />
     </ItemGroup>
 
 </Project>
